Minimal revision before publish

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -194,7 +194,7 @@ There are also length statistics of standard HTTPS traffic, which can be the con
         \includegraphics[width=\textwidth, height=4cm]{pics/temporal_statistic_of_length_naiveproxy.png}
         \caption{Naiveproxy}
     \end{subfigure}
-    \caption{Length-occurrence statistics}
+    \caption{Length-clock statistics}
 \end{figure}
 
 \subsubsection{Temporal domain (timing analysis)}
